--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pendulum = "*"
 aiobotocore = { version = ">=1.4.1,<3.0.0", optional = true }
 typing-extensions = { version = ">=4.1.0" }
 importlib-metadata = {version = "^6.6.0", python = "<3.8"}
+pydantic = { version = ">=2.5.0" }
 
 [tool.poetry.group.linting]
 optional = true
